# 2dgame

./: Cargo.toml
assets/config/: items.json
assets/lightmap_shader/: cien.wgsl
src/: eventer.rs  game.rs  loader.rs  main.rs  menu_ui.rs  monster.rs  physics.rs  physics_resources.rs  player.rs  player_game_ui.rs  setup.rs  terrain.rs
src/resourses/: mod.rs  physics_resources.rs
src/systems/: eventer.rs  loader.rs  menu_ui.rs  mod.rs  monster.rs  physics.rs  player.rs  player_game_ui.rs  terrain.rs
