[package]
name = "mgla_2d_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rapier2d = { version = "0.25.0", features = [ "simd-stable" ]}
noise = "0.8"
rand = "0.8"
# bevy_light_2d = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.8"
bevy_2d_screen_space_lightmaps = "0.18"
bevy_firefly = "0.18"

[profile.release]
debug = false
panic = "abort"

# [profile.dev]
#opt-level = 3
# debug = false
# strip = "none"
# debug-assertions = false
# overflow-checks = false
# lto = false
# panic = 'unwind'
# incremental = false
# codegen-units = 16
# rpath = false